# codex-native

./: .codespellrc  .gitignore  AGENTS.md  MULTI_AGENT_V2_README.md  README.md  SMART_FORKING_ANALYSIS.md  multi-agent-codex-system.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-worktree-codex.mjs  pr-worktree-codex.ts  testagent.ts  tsconfig.json  tsconfig.pr-worktree.json
.github/workflows/: rust-ci.yml  rust-release.yml  sdk.yml
codex-agents-suite/: package.json
codex-agents-suite/src/: pr-deep-reviewer.ts
codex-agents-suite/src/diff/: merge-conflict-solver.ts  merge-solver-cli.ts
codex-rs/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/: Cargo.toml
codex-rs/github/: Cargo.toml
codex-rs/github/src/: copilot.rs  lib.rs  opencode_auth.rs  token_refresh.rs
diff-agent/: README.md  package.json
diff-agent/src/: index.ts  merge-conflict-solver.ts  threadLogging.ts
docs/: crate-overview.md  lsp-diagnostics.md
multi-agent-codex-system/examples/: lsp-read-smoke.ts  lsp-smoke.ts
multi-agent-codex-system/src/: ci-checker-system.ts  cli.ts  constants.ts  index.ts  orchestrator.ts  pr-deep-reviewer.ts  reverie-hints.ts  reverie-logger.ts  reverie-quality.ts  reverie.ts  schemas.ts  tui-util.ts  types.ts
multi-agent-codex-system/tests/: reverie-system.test.ts  schema.test.ts
scripts/: ci-json.ts  claude-pr-auto-fix.mjs  reverie-smoke.ts
sdk/native/: .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  TUI_MODULAR_DESIGN.md  index.d.ts  index.js  package-lock.json  package.json  tsup.config.ts
sdk/typescript/: README.md
(+200 files in other folders)
