[package]
name = "codex-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
